# universal-memory-mcp

./: .gitignore  LICENSE  README.md  benchmark_embeddings.py  embeddings.py  memory_store.py  pyproject.toml  run.sh  schema.sql  search.py  server.py
tests/: test_embeddings.py  test_search.py  test_server.py  test_store.py
