[project]
name = "universal-memory-mcp"
version = "0.1.0"
description = "Universal persistent memory MCP server for single and multi-agent LLM systems"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.4",
    "numpy>=1.24.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
